src/objects/Order_Adjustment__c.object
<CustomObject>
    <description>Use an Order Adjustment to process refunds on an order or add an additional miscellaneous charge to a customer order.</description>
    <fields>
        <fullName>AS400_Order_Number__c</fullName>
        <description>AS400 Order Number</description>
        <label>AS400 Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_CVV__c</fullName>
        <label>CVV</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration_Date__c</fullName>
        <label>Credit Card Expiration Date</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Name__c</fullName>
        <label>Name on Card</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <description>Encrypted Credit Card Number for re-authorization.</description>
        <label>Credit Card Number</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Token__c</fullName>
        <label>Credit Card Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Adjustments</relationshipLabel>
        <relationshipName>Order_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Reason__c</fullName>
        <inlineHelpText>Error Reason for error-state orders sent from AS/400</inlineHelpText>
        <label>Error Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>From Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From Order History</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PayPal_Reference_ID__c</fullName>
        <inlineHelpText>System reference only</inlineHelpText>
        <label>PayPal Reference ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Return__c</fullName>
        <inlineHelpText>Products worth $25 or more must be returned before issuing a refund.</inlineHelpText>
        <label>Product Return</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting for Product Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Return Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refund_Type__c</fullName>
        <description>A Full Refund totals the value of all Order Line Items to calculate the total refund amount. A Partial Refund totals the value only of the Order Line Items that the user selects.</description>
        <label>Refund Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Refund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refund_or_Misc_Amount__c</fullName>
        <description>Stores Amount that needed to be refund or any Miscellaneous charges.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Order Adjustment is related to this Case.</description>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Order Adjustments</relationshipLabel>
        <relationshipName>Order_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Order_Amount__c</fullName>
        <label>Related Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_Order_Discount_Amount__c</fullName>
        <label>Related Order Discount Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Order Adjustment is being applied for these Order Line Items.</description>
        <label>Related Order Line Item</label>
        <referenceTo>Order_Line_Items__c</referenceTo>
        <relationshipLabel>Order Adjustments</relationshipLabel>
        <relationshipName>Order_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Order_Payment_Amount__c</fullName>
        <label>Related Order Payment Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_Order_Payment_Type__c</fullName>
        <label>Related Order Payment Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Order_Paypal_Transaction_ID__c</fullName>
        <label>Related Order Paypal Transaction ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Order_Shipping_Amount__c</fullName>
        <label>Related Order Shipping Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_Order_SubTotal__c</fullName>
        <label>Related Order SubTotal</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_Order_Tax_Amount__c</fullName>
        <label>Related Order Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_Order_Transaction_Ref_Number__c</fullName>
        <label>Related Order Transaction Ref Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the Order that this Order Adjustment affects.</description>
        <label>Related Order</label>
        <referenceTo>Orders__c</referenceTo>
        <relationshipLabel>Order Adjustments</relationshipLabel>
        <relationshipName>Order_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_Received_Date__c</fullName>
        <description>Date that the refunded product was received at NBTY.</description>
        <label>Return Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the return has been received. If not, leave unchecked. (Only applicable for refunds of $25 or more) .</inlineHelpText>
        <label>Return Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Order_Number__c</fullName>
        <label>Salesforce Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting to Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Reference_Number__c</fullName>
        <label>Transaction Reference Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Stores the record type, even when record is process and flipped to Read Only</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Misc. Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Order_Number__c</fullName>
        <description>Order Number from Web</description>
        <label>Web Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Order Adjustment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Refund_or_Misc_Amount__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Related_Case__c</columns>
        <columns>Related_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Error_OAs_Due_to_Order_Not_in_AS400</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Refund_or_Misc_Amount__c</columns>
        <columns>Related_Order__c</columns>
        <columns>AS400_Order_Number__c</columns>
        <columns>Salesforce_Order_Number__c</columns>
        <columns>Web_Order_Number__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Status__c</columns>
        <columns>Error_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <filters>
            <field>Error_Reason__c</field>
            <operation>equals</operation>
            <value>Order is not in AS400</value>
        </filters>
        <label>Error OAs Due to Order Not in AS400</label>
    </listViews>
    <listViews>
        <fullName>Error_state_Order_Adjustments</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Refund_or_Misc_Amount__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Related_Case__c</columns>
        <columns>Error_Reason__c</columns>
        <columns>Related_Order__c</columns>
        <columns>AS400_Order_Number__c</columns>
        <columns>Salesforce_Order_Number__c</columns>
        <columns>Web_Order_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>Error-state Order Adjustments</label>
    </listViews>
    <listViews>
        <fullName>Misc_Charges</fullName>
        <columns>NAME</columns>
        <columns>Refund_or_Misc_Amount__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Related_Case__c</columns>
        <columns>Related_Order__c</columns>
        <columns>AS400_Order_Number__c</columns>
        <columns>Salesforce_Order_Number__c</columns>
        <columns>Web_Order_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order_Adjustment__c.Misc_Charge</value>
        </filters>
        <label>Misc. Charges</label>
    </listViews>
    <listViews>
        <fullName>Misc_Charges_Awaiting_Payment</fullName>
        <columns>NAME</columns>
        <columns>Refund_or_Misc_Amount__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Related_Case__c</columns>
        <columns>Related_Order__c</columns>
        <columns>AS400_Order_Number__c</columns>
        <columns>Salesforce_Order_Number__c</columns>
        <columns>Web_Order_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Waiting for Payment</value>
        </filters>
        <label>Misc Charges Waiting for Payment</label>
    </listViews>
    <listViews>
        <fullName>Refunds</fullName>
        <columns>NAME</columns>
        <columns>Refund_or_Misc_Amount__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Related_Case__c</columns>
        <columns>Related_Order__c</columns>
        <columns>AS400_Order_Number__c</columns>
        <columns>Salesforce_Order_Number__c</columns>
        <columns>Web_Order_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order_Adjustment__c.Refund</value>
        </filters>
        <label>Refunds</label>
    </listViews>
    <listViews>
        <fullName>Refunds_200</fullName>
        <columns>NAME</columns>
        <columns>Refund_or_Misc_Amount__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Related_Case__c</columns>
        <columns>Related_Order__c</columns>
        <columns>AS400_Order_Number__c</columns>
        <columns>Salesforce_Order_Number__c</columns>
        <columns>Web_Order_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Refund_or_Misc_Amount__c</field>
            <operation>greaterOrEqual</operation>
            <value>USD 200</value>
        </filters>
        <filters>
            <field>Refund_or_Misc_Amount__c</field>
            <operation>lessThan</operation>
            <value>USD 500</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Approval</value>
        </filters>
        <label>Refunds $200+</label>
        <sharedTo>
            <group>Administrators</group>
            <group>Supervisors_Refunds_200</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Refunds_500</fullName>
        <columns>NAME</columns>
        <columns>Refund_or_Misc_Amount__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Related_Case__c</columns>
        <columns>Related_Order__c</columns>
        <columns>AS400_Order_Number__c</columns>
        <columns>Salesforce_Order_Number__c</columns>
        <columns>Web_Order_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Refund_or_Misc_Amount__c</field>
            <operation>greaterOrEqual</operation>
            <value>USD 500</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Approval</value>
        </filters>
        <label>Refunds $500+</label>
        <sharedTo>
            <group>Administrators</group>
            <group>Managers_Refunds_500</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rejected_Refunds</fullName>
        <columns>NAME</columns>
        <columns>Refund_or_Misc_Amount__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Related_Case__c</columns>
        <columns>Related_Order__c</columns>
        <columns>AS400_Order_Number__c</columns>
        <columns>Salesforce_Order_Number__c</columns>
        <columns>Web_Order_Number__c</columns>
        <columns>Error_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order_Adjustment__c.Refund</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected Refunds</label>
    </listViews>
    <nameField>
        <displayFormat>OA-{000000}</displayFormat>
        <label>Order Adjustment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Adjustments</pluralLabel>
    <recordTypes>
        <fullName>Misc_Charge</fullName>
        <active>true</active>
        <description>Use this record type to add charges to a customer&apos;s credit card to complete payment for an existing order</description>
        <label>Misc. Charge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <description>Read Only</description>
        <label>Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Refund</fullName>
        <active>true</active>
        <label>Refund</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_Refund_Type</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(RecordType.Name = &apos;Refund&apos;,ISPICKVAL( Refund_Type__c , &apos;&apos;)) , true,false)</errorConditionFormula>
        <errorMessage>You must select Refund Type (Full or Partial) before creating a Refund.</errorMessage>
    </validationRules>
</CustomObject>